# gst-plugins-bad

./: configure.ac  meson_options.txt
gst-libs/gst/: Makefile.am  meson.build
gst-libs/gst/cuda/: Makefile.am  cuda-prelude.h  gstcuda.h  gstcuda_fwd.h  gstcuda_private.h  gstcudabasefilter.c  gstcudabasefilter.h  gstcudabufferpool.c  gstcudabufferpool.h  gstcudacontext.c  gstcudacontext.h  gstcudaloader.c  gstcudaloader.h  gstcudamemory.c  gstcudamemory.h  gstcudautils.c  gstcudautils.h  meson.build
sys/: Makefile.am  meson.build
sys/bluez/: meson.build
sys/npp/: Makefile.am  gstnpploader.c  gstnpploader.h  gstnppscale.c  gstnppscale.h  meson.build  plugin.c
sys/nvcodec/: Makefile.am  gstcudabufferpool.c  gstcudabufferpool.h  gstcudacontext.c  gstcudacontext.h  gstcudadownload.c  gstcudadownload.h  gstcudaloader.c  gstcudaloader.h  gstcudamemory.c  gstcudamemory.h  gstcudaupload.c  gstcudaupload.h  gstcudautils.c  gstcudautils.h  gstcuvidloader.c  gstcuvidloader.h  gstnvbaseenc.c  gstnvbaseenc.h  gstnvdec.c  gstnvdec.h  gstnvenc.c  gstnvenc.h  gstnvh264enc.c  gstnvh265enc.c  meson.build  plugin.c
sys/nvdec/: gstnvdec.c
sys/wasapi/: gstwasapisrc.c  gstwasapisrc.h
tests/check/: Makefile.am  meson.build
tests/check/elements/: nvdec.c  nvenc.c
